--- a/index.html
+++ b/index.html
@@ -985,6 +985,43 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 </div>
 </div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/LOmap_BUsiness.png" alt="LOmap BUsiness">
+</div>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Entity</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Description</strong></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Interacts with the application front-end and sends requests to the backend.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">POD</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Stores user&#8217;s private information. In case the user is not registered it creates a new POD.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">System</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">It is responsible for making the application work.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Database</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Stores user&#8217;s logging information.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">API</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We are using OpenStreet Maps to visualize the locations.</p></td>
+</tr>
+</tbody>
+</table>
 <div class="paragraph">
 <p><strong>&lt;Diagram or Table&gt;</strong></p>
 </div>
@@ -1010,6 +1047,50 @@ The title of the table is the name of your system, the three columns contain the
 together with a mapping table showing the relationships between channels and input/output.</p>
 </div>
 </div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/Technical.png" alt="Technical">
+</div>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Technology</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Description</strong></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">REACT</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We use it to develop the frontend of the application</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SOLID</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We use SOLID PODs to store users information</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">JavaScript</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Principal language for our code application</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CSS</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Language to set different styles and positions to our components.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Docker</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Used for the system deployment</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">AWS</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Used for the system deployment</p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>We use OpenStreet Maps as the main API for the project to visualize the maps.</p>
 </div>
 <div class="paragraph">
 <p><strong>&lt;Diagram or Table&gt;</strong></p>
@@ -1972,7 +2053,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-02 10:48:23 +0100
+Last updated 2023-02-05 09:01:18 +0100
 </div>
 </div>
 </body>
