--- a/index.html
+++ b/index.html
@@ -1022,12 +1022,6 @@ The title of the table is the name of your system, the three columns contain the
 </tr>
 </tbody>
 </table>
-<div class="paragraph">
-<p><strong>&lt;Diagram or Table&gt;</strong></p>
-</div>
-<div class="paragraph">
-<p><strong>&lt;optionally: Explanation of external domain interfaces&gt;</strong></p>
-</div>
 </div>
 <div class="sect2">
 <h3 id="_technical_context">3.2. Technical Context</h3>
@@ -1087,19 +1081,14 @@ together with a mapping table showing the relationships between channels and inp
 <td class="tableblock halign-left valign-top"><p class="tableblock">AWS</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Used for the system deployment</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Used for store user&#8217;s logging info</p></td>
+</tr>
 </tbody>
 </table>
 <div class="paragraph">
 <p>We use OpenStreet Maps as the main API for the project to visualize the maps.</p>
-</div>
-<div class="paragraph">
-<p><strong>&lt;Diagram or Table&gt;</strong></p>
-</div>
-<div class="paragraph">
-<p><strong>&lt;optionally: Explanation of technical interfaces&gt;</strong></p>
-</div>
-<div class="paragraph">
-<p><strong>&lt;Mapping Input/Output to Channels&gt;</strong></p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
