--- a/index.html
+++ b/index.html
@@ -783,24 +783,34 @@ These stakeholders determine the extent and the level of detail of your work and
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SOLID</p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Make decentralized SOLID based technologies more visible for the public</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Inrupt</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:info@inrupt.com">info@inrupt.com</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Make decentralized SOLID based technologies more visible for the public through this app</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Development team</p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Build a full functional app, hone teamwork and try to get the scolarship offered by SOLID team</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Eduardo Blanco Bielsa</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:uo285176@uniovi.es">uo285176@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Build a secure and decentralized app, hone teamwork and try to get the scolarship offered by SOLID team</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Citizens</p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Discover new places and stablishments and be able to tell their favourite ones to their friends</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Jonathan Arias Busto</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:uo283586@uniovi.es">uo283586@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Learn new skills and learn how to work as a team on big projects</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Establishments</p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Make themselves known by adding them to the map</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Laura Cordero Castrillo</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:uo275955@uniovi.es">uo275955@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Build a useful app and learn new technologies</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Fernando José González Sierra</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:uo277938@uniovi.es">uo277938@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Learn new frontend skills and build a nice app</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Cristian Augusto</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:augustocristian@uniovi.es">augustocristian@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A full functional and decentralized app</p></td>
 </tr>
 </tbody>
 </table>
@@ -1515,7 +1525,7 @@ building block instances depicted in this diagram.&gt;</em></p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="332" height="335">
+<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="348" height="345">
 </div>
 </div>
 </div>
@@ -2042,7 +2052,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-05 09:01:18 +0100
+Last updated 2023-02-12 18:52:02 +0100
 </div>
 </div>
 </body>
