--- a/index.html
+++ b/index.html
@@ -1144,6 +1144,40 @@ Refer to details in the following sections.</p>
 </div>
 </div>
 </div>
+<div class="paragraph">
+<p>We have chosen to use the next technologies on the app:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>React</strong>: is a Javascript library focused on developing user interfaces so we decided to use it because of its big documentation and easy learning. It is also a solid base for creating apps with Javascript.</p>
+</li>
+<li>
+<p><strong>SOLID</strong>: is an acronym that refers to five good and essential principles for the design of a software architecture (<strong>S</strong>ingle Responsibility, <strong>O</strong>pen/Closed, <strong>L</strong>iskov Substitution, <strong>I</strong>nterface Segregation and <strong>D</strong>ependency Inversion). With this principles the user knows that all his "sensitive data" is safe and decentralized. We use it because it is required on the project.</p>
+</li>
+<li>
+<p><strong>Node js</strong>: is a Javascript execution environment controlled by events, what makes it light and efficient. It is also a nice option for reactive web apps because it&#8217;s able to provide a big amount of simultaneous conections with high performance (big scalability).</p>
+</li>
+<li>
+<p><strong>Javascript</strong>: is an interpreted programming language based on prototypes, imperative and dynamic. We will use it mainly for frontend.</p>
+</li>
+<li>
+<p><strong>CSS</strong>: is a graphic programming language oriented to define the rpesentation of a document. We will use it as part of the frontend of the app.</p>
+</li>
+<li>
+<p><strong>Docker</strong>: is a software platform that allows to create, try and implement new apps easily and fast. We will use it for the fast deployment of our web application.</p>
+</li>
+<li>
+<p><strong>AWS</strong>: is a cloud server provider which we will use to deploy our app. It is also free (for our specific case) and it&#8217;s one of the fastest options for deploying the app.</p>
+</li>
+<li>
+<p><strong>MongoDB</strong>: is a NoSQL document-oriented database. Instead of saving data on tables (relational databases), MongoDB saves BSON data estructures (similar to JSON). We will use it for some specific data saving on the app.</p>
+</li>
+<li>
+<p><strong>Github</strong>: is a version management system where all the code will be stored, structured and modified.</p>
+</li>
+</ul>
+</div>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
