--- a/index.html
+++ b/index.html
@@ -465,9 +465,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#section-solution-strategy">4. Solution Strategy</a></li>
 <li><a href="#section-building-block-view">5. Building Block View</a>
 <ul class="sectlevel2">
-<li><a href="#_whitebox_overall_system">5.1. Whitebox Overall System</a></li>
-<li><a href="#_level_2">5.2. Level 2</a></li>
-<li><a href="#_level_3">5.3. Level 3</a></li>
+<li><a href="#_whitebox_overall_system_level_1">5.1. Whitebox Overall System - Level 1</a></li>
+<li><a href="#_building_block_view_level_2">5.2. Building block view - Level 2</a></li>
 </ul>
 </li>
 <li><a href="#section-runtime-view">6. Runtime View</a>
@@ -1229,7 +1228,7 @@ Thus it contains the white box description of selected building blocks of level 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_whitebox_overall_system">5.1. Whitebox Overall System</h3>
+<h3 id="_whitebox_overall_system_level_1">5.1. Whitebox Overall System - Level 1</h3>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -1271,13 +1270,6 @@ In the best case you will get away with examples or simple signatures.</p>
 <div class="paragraph">
 <p>Here, the app is represented as a whitebox. Inside of it we can see the three layers of MVC (Model View Controller) convention in black boxes:</p>
 </div>
-<div class="imageblock">
-<div class="content">
-<img src="./images/Whitebox_Overall_System.png" alt="Whitebox Overall System">
-</div>
-</div>
-<div class="sect3">
-<h4 id="_name_black_box_1">5.1.1. &lt;Name black box 1&gt;</h4>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -1308,50 +1300,41 @@ according the the following black box template:</p>
 </div>
 </div>
 </div>
-<div class="paragraph">
-<p><em>&lt;Purpose/Responsibility&gt;</em></p>
-</div>
-<div class="paragraph">
-<p><em>&lt;Interface(s)&gt;</em></p>
-</div>
-<div class="paragraph">
-<p><em>&lt;(Optional) Quality/Performance Characteristics&gt;</em></p>
-</div>
-<div class="paragraph">
-<p><em>&lt;(Optional) Directory/File Location&gt;</em></p>
-</div>
-<div class="paragraph">
-<p><em>&lt;(Optional) Fulfilled Requirements&gt;</em></p>
-</div>
-<div class="paragraph">
-<p><em>&lt;(optional) Open Issues/Problems/Risks&gt;</em></p>
+<div class="imageblock">
+<div class="content">
+<img src="./images/Whitebox_Overall_System.png" alt="Whitebox Overall System">
 </div>
 </div>
 <div class="sect3">
-<h4 id="_name_black_box_2">5.1.2. &lt;Name black box 2&gt;</h4>
-<div class="paragraph">
-<p><em>&lt;black box template&gt;</em></p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_name_black_box_n">5.1.3. &lt;Name black box n&gt;</h4>
-<div class="paragraph">
-<p><em>&lt;black box template&gt;</em></p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_name_interface_1">5.1.4. &lt;Name interface 1&gt;</h4>
-<div class="paragraph">
-<p>&#8230;&#8203;</p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_name_interface_m">5.1.5. &lt;Name interface m&gt;</h4>
-
+<h4 id="_black_box_descriptions_of_overall_system">5.1.1. Black Box descriptions of Overall System</h4>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Name</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Responsability</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Model</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Stores/gets data from/to database and gets info from personal pods. Defines business model and also gives information to the view layer to represent it.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>View</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Process the data sent by Model layer and represents it  on the web. This layer is the one which interacts with the final user.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Controller</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">This layer receives the inputs from users and manages the interactions between View layer and Model layer</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_level_2">5.2. Level 2</h3>
+<h3 id="_building_block_view_level_2">5.2. Building block view - Level 2</h3>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -1364,74 +1347,12 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 </div>
 </div>
 </div>
-<div class="sect3">
-<h4 id="_white_box_building_block_1">5.2.1. White Box <em>&lt;building block 1&gt;</em></h4>
-<div class="sidebarblock arc42help">
+<div class="imageblock">
 <div class="content">
-<div class="paragraph">
-<p>&#8230;&#8203;describes the internal structure of <em>building block 1</em>.</p>
+<img src="./images/building_block_view.png" alt="building block view">
 </div>
-</div>
-</div>
-<div class="paragraph">
-<p><em>&lt;white box template&gt;</em></p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_white_box_building_block_2">5.2.2. White Box <em>&lt;building block 2&gt;</em></h4>
-<div class="paragraph">
-<p><em>&lt;white box template&gt;</em></p>
-</div>
-<div class="paragraph">
-<p>&#8230;&#8203;</p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_white_box_building_block_m">5.2.3. White Box <em>&lt;building block m&gt;</em></h4>
-<div class="paragraph">
-<p><em>&lt;white box template&gt;</em></p>
-</div>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_level_3">5.3. Level 3</h3>
-<div class="sidebarblock arc42help">
-<div class="content">
-<div class="paragraph">
-<p>Here you can specify the inner structure of (some) building blocks from level 2 as white boxes.</p>
-</div>
-<div class="paragraph">
-<p>When you need more detailed levels of your architecture please copy this
-part of arc42 for additional levels.</p>
-</div>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_white_box_building_block_x_1">5.3.1. White Box &lt;_building block x.1_&gt;</h4>
-<div class="sidebarblock arc42help">
-<div class="content">
-<div class="paragraph">
-<p>Specifies the internal structure of <em>building block x.1</em>.</p>
-</div>
-</div>
-</div>
-<div class="paragraph">
-<p><em>&lt;white box template&gt;</em></p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_white_box_building_block_x_2">5.3.2. White Box &lt;_building block x.2_&gt;</h4>
-<div class="paragraph">
-<p><em>&lt;white box template&gt;</em></p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_white_box_building_block_y_1">5.3.3. White Box &lt;_building block y.1_&gt;</h4>
-<div class="paragraph">
-<p><em>&lt;white box template&gt;</em></p>
 </div>
 <div style="page-break-after: always;"></div>
-</div>
 </div>
 </div>
 </div>
@@ -1500,7 +1421,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="448" height="335">
+<img src="./images/register%20diagram.png" alt="register diagram" width="464" height="345">
 </div>
 </div>
 </div>
@@ -1508,7 +1429,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="546" height="409">
+<img src="./images/login%20diagram.png" alt="login diagram" width="572" height="421">
 </div>
 </div>
 </div>
@@ -1516,7 +1437,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="628" height="426">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="643" height="440">
 </div>
 </div>
 </div>
@@ -1524,7 +1445,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="555" height="365">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="576" height="376">
 </div>
 </div>
 </div>
@@ -1532,7 +1453,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="650" height="365">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="665" height="376">
 </div>
 </div>
 </div>
@@ -1540,7 +1461,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="742" height="335">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="775" height="345">
 </div>
 </div>
 </div>
@@ -1548,7 +1469,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="851" height="426">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="889" height="440">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -2106,7 +2027,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-12 19:28:40 +0100
+Last updated 2023-02-12 18:52:02 +0100
 </div>
 </div>
 </body>
