--- a/index.html
+++ b/index.html
@@ -489,8 +489,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#section-concepts">8. Cross-cutting Concepts</a>
 <ul class="sectlevel2">
 <li><a href="#_domain_model">8.1. Domain model</a></li>
-<li><a href="#_concept_2">8.2. <em>&lt;Concept 2&gt;</em></a></li>
-<li><a href="#_concept_n">8.3. <em>&lt;Concept n&gt;</em></a></li>
+<li><a href="#_user_interface">8.2. User Interface</a></li>
 </ul>
 </li>
 <li><a href="#section-design-decisions">9. Design Decisions</a></li>
@@ -1421,7 +1420,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="464" height="345">
+<img src="./images/register%20diagram.png" alt="register diagram" width="448" height="335">
 </div>
 </div>
 </div>
@@ -1429,7 +1428,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="572" height="421">
+<img src="./images/login%20diagram.png" alt="login diagram" width="546" height="409">
 </div>
 </div>
 </div>
@@ -1437,7 +1436,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="643" height="440">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="628" height="426">
 </div>
 </div>
 </div>
@@ -1445,7 +1444,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="576" height="376">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="555" height="365">
 </div>
 </div>
 </div>
@@ -1453,7 +1452,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="665" height="376">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="650" height="365">
 </div>
 </div>
 </div>
@@ -1461,7 +1460,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="775" height="345">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="742" height="335">
 </div>
 </div>
 </div>
@@ -1469,7 +1468,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="889" height="440">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="851" height="426">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1762,18 +1761,14 @@ on this list.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_concept_2">8.2. <em>&lt;Concept 2&gt;</em></h3>
+<h3 id="_user_interface">8.2. User Interface</h3>
 <div class="paragraph">
-<p><em>&lt;explanation&gt;</em></p>
+<p>Prototype version:</p>
 </div>
-<div class="paragraph">
-<p>&#8230;&#8203;</p>
+<div class="imageblock">
+<div class="content">
+<img src="./images/ux1.0_Main.png" alt="ux1.0 Main">
 </div>
-</div>
-<div class="sect2">
-<h3 id="_concept_n">8.3. <em>&lt;Concept n&gt;</em></h3>
-<div class="paragraph">
-<p><em>&lt;explanation&gt;</em></p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -1820,6 +1815,52 @@ here in this central section or whether you better document it locally
 </div>
 </div>
 </div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 25%;">
+<col style="width: 25%;">
+<col style="width: 25%;">
+<col style="width: 25%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Decision</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Details</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Advantages</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Disadvantages</strong></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Architecture</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will use MVC as the architecture design.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will have a very well structured code separarated by Model, View and Controller.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The separation in layers makes the application more complex.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Data Base</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will use MongoDB to store some information.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MonboDB works good with NodeJS.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">It is a new technology for the team, so we have to learn.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">OpenStreetMaps API</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will use the API to create the map.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">It&#8217;s free, not like the Google Maps API.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">It&#8217;s the first time using it, we&#8217;ll have to adapt.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Docker+AWS</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We use them to deploy the application.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">It&#8217;s free and it provides a very fast deployment.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The general cloud computing issues as backup protection.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CSS</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We use it to add a nice look to the application.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">It&#8217;s a well known stylesheet languaje for the team.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Different browsers work different, we have to take care of it.</p></td>
+</tr>
+</tbody>
+</table>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
@@ -2027,7 +2068,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-12 18:52:02 +0100
+Last updated 2023-02-12 19:28:40 +0100
 </div>
 </div>
 </body>
