--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="448" height="335">
+<img src="./images/register%20diagram.png" alt="register diagram" width="475" height="328">
 </div>
 </div>
 </div>
@@ -1428,7 +1428,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="546" height="409">
+<img src="./images/login%20diagram.png" alt="login diagram" width="578" height="399">
 </div>
 </div>
 </div>
@@ -1436,7 +1436,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="628" height="426">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="661" height="415">
 </div>
 </div>
 </div>
@@ -1444,7 +1444,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="555" height="365">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="599" height="357">
 </div>
 </div>
 </div>
@@ -1452,7 +1452,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="650" height="365">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="686" height="357">
 </div>
 </div>
 </div>
@@ -1460,7 +1460,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="742" height="335">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="799" height="328">
 </div>
 </div>
 </div>
@@ -1468,7 +1468,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="851" height="426">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="917" height="415">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1556,22 +1556,19 @@ when your infrastructure is more complex.</p>
 </div>
 </div>
 </div>
-<div class="paragraph">
-<p><em><strong>&lt;Overview Diagram&gt;</strong></em></p>
-</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Motivation</dt>
 <dd>
-<p><em>&lt;explanation in text form&gt;</em></p>
+<p>This diagram helps us to visualise which components we will use and their dependencies.</p>
 </dd>
 <dt class="hdlist1">Quality and/or Performance Features</dt>
 <dd>
-<p><em>&lt;explanation in text form&gt;</em></p>
+<p>To improve the performance of the application we have chosen MongoDB as the database that will store some information. It helps us because it is a very efficient database.</p>
 </dd>
 <dt class="hdlist1">Mapping of Building Blocks to Infrastructure</dt>
 <dd>
-<p><em>&lt;description of the mapping&gt;</em></p>
+<p><span class="image"><img src="./images/Deployment1.png" alt="arc42"></span></p>
 </dd>
 </dl>
 </div>
@@ -1588,28 +1585,23 @@ when your infrastructure is more complex.</p>
 </div>
 </div>
 </div>
-<div class="sect3">
-<h4 id="_infrastructure_element_1">7.2.1. <em>&lt;Infrastructure Element 1&gt;</em></h4>
-<div class="paragraph">
-<p><em>&lt;diagram + explanation&gt;</em></p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_infrastructure_element_2">7.2.2. <em>&lt;Infrastructure Element 2&gt;</em></h4>
-<div class="paragraph">
-<p><em>&lt;diagram + explanation&gt;</em></p>
-</div>
-<div class="paragraph">
-<p>&#8230;&#8203;</p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_infrastructure_element_n">7.2.3. <em>&lt;Infrastructure Element n&gt;</em></h4>
-<div class="paragraph">
-<p><em>&lt;diagram + explanation&gt;</em></p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Motivation</dt>
+<dd>
+<p>This diagram allow us to have a more exhaustive vision about how the deployment on AWS would work. It includes the docker containers.</p>
+</dd>
+<dt class="hdlist1">Quality and/or Performance Features</dt>
+<dd>
+<p>We are going to use AWS to deploy the application, working as a remote server. We will use Docker to launch each part of the system.</p>
+</dd>
+<dt class="hdlist1">Mapping of Building Blocks to Infrastructure</dt>
+<dd>
+<p><span class="image"><img src="./images/Deployment2.png" alt="arc42"></span></p>
+</dd>
+</dl>
 </div>
 <div style="page-break-after: always;"></div>
-</div>
 </div>
 </div>
 </div>
@@ -2117,7 +2109,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-05 09:01:18 +0100
+Last updated 2023-02-16 18:17:47 +0100
 </div>
 </div>
 </body>
