--- a/index.html
+++ b/index.html
@@ -499,7 +499,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_quality_scenarios">10.2. Quality Scenarios</a></li>
 </ul>
 </li>
-<li><a href="#section-technical-risks">11. Risks and Technical Debts</a></li>
+<li><a href="#section-technical-risks">11. Risks and Technical Debts</a>
+<ul class="sectlevel2">
+<li><a href="#_risks">11.1. Risks</a></li>
+<li><a href="#_technical_debt">11.2. Technical Debt</a></li>
+</ul>
+</li>
 <li><a href="#section-glossary">12. Glossary</a></li>
 </ul>
 </div>
@@ -1420,7 +1425,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="475" height="328">
+<img src="./images/register%20diagram.png" alt="register diagram" width="448" height="335">
 </div>
 </div>
 </div>
@@ -1428,7 +1433,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="578" height="399">
+<img src="./images/login%20diagram.png" alt="login diagram" width="546" height="409">
 </div>
 </div>
 </div>
@@ -1436,7 +1441,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="661" height="415">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="628" height="426">
 </div>
 </div>
 </div>
@@ -1444,7 +1449,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="599" height="357">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="555" height="365">
 </div>
 </div>
 </div>
@@ -1452,7 +1457,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="686" height="357">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="650" height="365">
 </div>
 </div>
 </div>
@@ -1460,7 +1465,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="799" height="328">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="742" height="335">
 </div>
 </div>
 </div>
@@ -1468,7 +1473,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="917" height="415">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="851" height="426">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -2024,7 +2029,60 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_risks">11.1. Risks</h3>
+<div class="paragraph">
+<p>This is a list of identified technical risks, ordered by priority (1 is the highest priority).</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Not knowing some of the technologies that we decided to use in this application. Such as SOLID (and PODs), REACT, AWS, OpenStreet Maps API or Docker. Some of us haven&#8217;t worked with web applications either.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>In order to avoid this risk or minimize its damage, we will have to learn how to use this technologies, having to spend some time to do it.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Due to having other projects and exams from other subjects, we will have limited time to work on this project that can lead to errors for rushing the project.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>In order to avoid this risk or minimize its damage, we will have to plan well how we are going to do this project.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>A member of the group could leave it or drop the subject, having to work the same with less members.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>In order to avoid this risk or minimize its damage, we will have to quickly restructure the assignments to each member so the project can continue. We must avoid the bus factor.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Some of the members of the group didn&#8217;t know each other before the project, this could lead to misunderstandings because we are not close enough to voice our concerns or ideas.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>In order to avoid this risk or minimize its damage, we will have to be open to the other team members, always consider their ideas and help each other if someone doesn&#8217;t understand something.</p>
+</li>
+</ul>
+</div>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_technical_debt">11.2. Technical Debt</h3>
 <div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2075,12 +2133,44 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">&lt;Term-1&gt;</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">&lt;definition-1&gt;</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">API</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Application Programming Interface. It&#8217;s a set of defined rules that enable different applications to communicate with each other. It acts as an intermediary layer.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">&lt;Term-2&gt;</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">&lt;definition-2&gt;</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Backend</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Part of a computer application or a program&#8217;s code that allow it to operate and that cannot be accessed by a user</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Decentrilized/centrilized Data</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">In a <strong>centralized</strong> network, all users are connected to a central server that stores complete network data and user information. On the contrary, a <strong>decentralized</strong> network has several peer-to-peer user groups wherein each group has its separate server that stores data and information relevant to only that particular group.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Deployment</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Mechanism through which applications, modules, updates, and patches are delivered from developers to users</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Framework</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tool that provides ready-made components or solutions that are customized in order to speed up development</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Frontend</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Part of computer programming that focuses on the coding and creation of elements and features that will then be seen by the user.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">GitHub</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Code hosting platform for version control and collaboration.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MVC</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Pattern in software design commonly used to implement user interfaces, data, and controlling logic. It emphasizes a separation between the software&#8217;s business logic and display.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">POD</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Pods are like secure personal web servers for data. When data is stored in someone&#8217;s Pod, they control which people and applications can access it.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SOLID</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SOLID is an acronym for the first five object-oriented design principleS. These principles establish practices that lend to developing software with considerations for maintaining and extending as the project grows.</p></td>
 </tr>
 </tbody>
 </table>
@@ -2109,7 +2199,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-16 18:17:47 +0100
+Last updated 2023-02-05 09:01:18 +0100
 </div>
 </div>
 </body>
