--- a/index.html
+++ b/index.html
@@ -462,7 +462,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_technical_context">3.2. Technical Context</a></li>
 </ul>
 </li>
-<li><a href="#section-solution-strategy">4. Solution Strategy</a></li>
+<li><a href="#section-solution-strategy">4. Solution Strategy</a>
+<ul class="sectlevel2">
+<li><a href="#_why_this_technologies">4.1. Why this technologies?</a></li>
+</ul>
+</li>
 <li><a href="#section-building-block-view">5. Building Block View</a>
 <ul class="sectlevel2">
 <li><a href="#_whitebox_overall_system_level_1">5.1. Whitebox Overall System - Level 1</a></li>
@@ -1184,7 +1188,23 @@ Refer to details in the following sections.</p>
 </li>
 </ul>
 </div>
+<div class="sect2">
+<h3 id="_why_this_technologies">4.1. Why this technologies?</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>React, CSS, Javascript and NodeJS were chosen to reach a good level of usability and accesibility.</p>
+</li>
+<li>
+<p>MongoDB, SOLID, docker and some libraries o9f NodeJS will provide the privacy, integrity and security of the web app.</p>
+</li>
+<li>
+<p>Github was chosen for version control and organization and communication between the team.</p>
+</li>
+</ul>
+</div>
 <div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 <div class="sect1">
