--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -24,10 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ASW 2022-2023</title>
+    <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+      <div id="header"></div>
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
