--- a/index.html
+++ b/index.html
@@ -822,6 +822,11 @@ These stakeholders determine the extent and the level of detail of your work and
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:augustocristian@uniovi.es">augustocristian@uniovi.es</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">A full functional and decentralized app</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Irene Cid</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:cidirene@uniovi.es">cidirene@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A full functional and decentralized app</p></td>
+</tr>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
@@ -2223,7 +2228,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-12 19:28:40 +0100
+Last updated 2023-02-05 09:01:18 +0100
 </div>
 </div>
 </body>
